--- a/app/templates/organisations/create_org.html
+++ b/app/templates/organisations/create_org.html
@@ -32,7 +32,7 @@
                 {{ f.render_form_field(form.org_industry) }}
             </div>
             <div class="field">
-                {{ f.render_form_field(form.logo) }}
+                {{ f.render_form_field(form.mobile_phone) }}
             </div>
             <div class="four fields">
                 {{ f.render_form_field(form.org_website) }}
