--- a/app/templates/question/index.html
+++ b/app/templates/question/index.html
@@ -27,10 +27,10 @@
                 Customer Dashboard
             </h2>
             <div class="ui two column stackable grid">
-                {{ dashboard_option('Questions Asked', 'admin.registered_users',
-                                    description='View and manage user accounts', icon='list ul icon') }}
-                {{ dashboard_option('Add New Questionnaire', 'admin.new_user',
-                                    description='Create a questionniare', icon='edit icon') }}
+                {{ dashboard_option('Questions Asked', 'question.list_questions',
+                                    description='View and manage questions', icon='list ul icon') }}
+                {{ dashboard_option('Add New Questionnaire', 'question.new_question',
+                                    description='Create a survey project', icon='edit icon') }}
 
             </div>
         </div>
