--- a/app/templates/question/new_question.html
+++ b/app/templates/question/new_question.html
@@ -26,23 +26,14 @@
 
             {{ f.begin_form(form, flashes) }}
 
-                {{ f.render_form_field(form.role) }}
 
-                <div class="two fields">
-                    {{ f.render_form_field(form.first_name) }}
-                    {{ f.render_form_field(form.last_name) }}
+                <div class="field">
+                    {{ f.render_form_field(form.name) }}
                 </div>
-
-                {{ f.render_form_field(form.email) }}
-
-                {% if form.password %}
-
-                    <div class="two fields">
-                        {{ f.render_form_field(form.password) }}
-                        {{ f.render_form_field(form.password2) }}
-                    </div>
-
-                {% endif %}
+                <div class="field">
+                    {{ f.render_form_field(form.description) }}
+                </div>
+				
 
                 {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
                 {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
@@ -54,9 +45,6 @@
                 {% endfor %}
 
             {{ f.end_form() }}
-            {% if form.password %} 
-              {{ check.password_check('password', 0) }} 
-            {% endif %}
         </div>
     </div>
 {% endblock %}
