--- a/app/templates/question/create_question.html
+++ b/app/templates/question/create_question.html
@@ -9,13 +9,13 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-            <a class="ui basic compact button" href="{{ url_for('organisations.select_org', org_id=org.id) }}">
+                <a class="ui basic compact button" href="{{ url_for('question.list_questions', org_id=org.id) }}">
                 <i class="caret left icon"></i>
-                Back to "{{ org.org_name }}"
+                Back to "{{ org.org_name }}" Questions' List
             </a>
             <h2 class="ui header">
-                Edit your Organization
-                <span class="sub header">Edit account</span>
+                Create a new question
+                <div class="sub header">Add a question</div>
             </h2>
 
             {% set flashes = {
@@ -27,23 +27,12 @@
 
             {{ f.begin_form(form, flashes) }}
 
-            <div class="two fields">
-                {{ f.render_form_field(form.org_name) }}
-                {{ f.render_form_field(form.org_industry) }}
+            <div class="field">
+                {{ f.render_form_field(form.name) }}
             </div>
             <div class="field">
-                {{ f.render_form_field(form.mobile_phone) }}
+                {{ f.render_form_field(form.description) }}
             </div>
-            <div class="four fields">
-                {{ f.render_form_field(form.org_website) }}
-                {{ f.render_form_field(form.org_city) }}
-                {{ f.render_form_field(form.org_state) }}
-                {{ f.render_form_field(form.org_country) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.org_description) }}
-            </div>
-
 
             {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
             {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
