Added Codes for questions
Questions working now. Have not added payment system yet.

--- a/app/templates/question/question_dashboard.html
+++ b/app/templates/question/question_dashboard.html
@@ -23,6 +23,10 @@
 {% block content %}
     <div class="ui stackable grid container">
         <div class="sixteen wide tablet twelve wide computer centered column">
+            <a class="ui basic compact button" href="{{ url_for('question.index') }}">
+                <i class="caret left icon"></i>
+                Back to Question dashboard
+            </a>
             <h2 class="ui header">
                 Questions
                 <div class="sub header">
@@ -30,49 +34,44 @@
                 </div>
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
-                <a class="ui green right floated button" href="{{ url_for('organisations.create_org') }}">Create New</a>
-            </div>
+			{% if count < 10 %}
+                <a class="ui green right floated button" href="{{ url_for('question.new_question', org_id=org.id) }}">Create New</a>
+			{% else %}
+ 			{% endif %}
+			</div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
-            <div style="overflow-x: scroll;">
+
+            <div style="overflow-x: scroll;"> 
                 <table class="ui searchable sortable unstackable selectable celled table">
                     <thead>
                     <tr>
-                        <th class="sorted ascending" >Name</th>
-                        <th>Creator</th>
-                        <th>City</th>
-                        <th>State</th>
-                        <th>Country</th>
-                        <th>Actions</th>
+                        <th class="sorted ascending" >ID</th>
+                        <th>Question No.</th>
+                        <th>Question Title</th>
+                        <th>Option One</th>
+                        <th>Option Two</th>
+                        <th>Option Three</th>
+                        <th>Option Four</th>
+                        <th>Option Five</th>
+                        <th>Edit</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for u in orgs | sort(attribute='org_name') %}
-                        <tr onclick="window.location.href = '{{ url_for('admin.user_info', user_id=u.id) }}';">
-
-                            <td>{{ u.org_name }}</td>
-                            <td>{{ u.user.full_name() }}</td>
-                            <td>{{ u.org_city }}</td>
-                            <td>{{ u.org_state }}</td>
-                            <td>{{ u.org_country }}</td>
-                            <td>
-                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">Select</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div style="overflow-x: scroll;">
-                <table class="ui searchable sortable unstackable selectable celled table">
-                    <tbody>
-                    {% for u in questions %}
+                    {% for u in question %}
                         <tr>
-
-                            <td>{{ u.name }}</td>
-                            <td>{{ u.multiple_choice_questions.title }}</td>
+                            <td>{{ u.id }}</td>
+                            <td>{{ u.question }}</td>
+                            <td>{{ u.description }}</td>
+                            <td>{{ u.option_one }}</td>
+                            <td>{{ u.option_two }}</td>
+                            <td>{{ u.option_three }}</td>
+                            <td>{{ u.option_four }}</td>
+                            <td>{{ u.option_five}}</td>
                             <td>
-                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">Select</a>
+                                <a class="ui blue left floated button" href="{{ url_for('question.edit_question', question_id=u.id, question=u.question) }}">Edit</a>
+                                <!---<a class="ui red left floated button" style="margin-top: 1px"
+                                   href="{# url_for('question.delete_question', question_id=u.id) #}" onclick="return confirmDeleteQuestion('{{ question.id }}');" data-content="{{ question.id }}">Delete</a>--->						
                             </td>
                         </tr>
                     {% endfor %}
@@ -80,5 +79,33 @@
                 </table>
             </div>
         </div>
+        <form method="POST" action="{{ url_for('question.delete_question', question_id=0) }}" id="delete-questin-form">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        </form>
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+    <script>
+        function confirmDeleteQuestion(question_id){
+            swal({
+                title: "Are you sure?",
+                text: "Once deleted, you will not be able to recover this question",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                .then((willDelete) => {
+                    if (willDelete) {
+                        let form = $("#delete-question-form");
+                        form.attr('action', "{{ url_for('question.delete_question', question_id=0) }}".replace('0',question_id));
+                        form.submit();
+                    } else {
+                        return false;
+                    }
+                });
+            return false;
+        }
+    </script>
+
 {% endblock %}
