--- a/app/templates/question/edit_question.html
+++ b/app/templates/question/edit_question.html
@@ -9,13 +9,13 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-                <a class="ui basic compact button" href="{{ url_for('question.list_questions', org_id=org.id) }}">
+                <a class="ui basic compact button" href="{{ url_for('question.index') }}">
                 <i class="caret left icon"></i>
-                Back to "{{ org.org_name }}" Questions' List
+                Back to Questions' List
             </a>
             <h2 class="ui header">
-                Create a new question
-                <div class="sub header">Add a question</div>
+                Edit
+                <div class="sub header">Edit question</div>
             </h2>
 
             {% set flashes = {
