Added project function
Added project function

--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -22,10 +22,13 @@
 {% macro header_items(current_user) %}
     {% set endpoints = [
       ('main.index', config.APP_NAME, 'home'),
-      ('main.about', 'About', 'info')
+      ('main.about', 'About', 'info'),
+	  ('organisations.org_home', 'Organization Dashboard', 'building'),
+	  ('project.index', 'Project Dashboard', 'folder open'),
+	  ('question.index', 'Question Dashboard', 'tasks')
     ]%}
     {% set user = [] %}
-    {% if current_user.is_authenticated %}
+    {% if current_user.is_authenticated and current_user.role.is_admin %}
       {% set user = ([(current_user.role.index + '.index', current_user.role.name + ' Dashboard', 'user')]) %}
     {% endif %} 
     {{ render_menu_items( endpoints +  user ) }}
