--- a/app/templates/organisations/org_dashboard.html
+++ b/app/templates/organisations/org_dashboard.html
@@ -26,11 +26,14 @@
             <h2 class="ui header">
                 Your Organizations
                 <div class="sub header">
-                    View and manage currently involved in organizations.
+                   **Please click the button to add the details of your organization before you can proceed with creating a questions.
+				   **Once you have created an organization, click on the "view details" button to view the details you created.
+				   **One Organization can have multiple projects under the same organization. You can create a seperate Organization to seperate projects between Organizations.
+				   **Each project can only create 10 questions per project. 
                 </div>
             </h2>
             <div class="ui header" style="width: 100%; height: 50px">
-                <a class="ui green right floated button" href="{{ url_for('organisations.create_org') }}">Create New</a>
+                <a class="ui teal right floated button" href="{{ url_for('organisations.create_org') }}">Create New Organization</a>
             </div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
@@ -44,6 +47,7 @@
                         <th>State</th>
                         <th>Country</th>
                         <th>Actions</th>
+                        <th>Project</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -56,7 +60,10 @@
                             <td>{{ u.org_state }}</td>
                             <td>{{ u.org_country }}</td>
                             <td>
-                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">Select</a>
+                                <a class="ui primary button" href="{{ url_for('organisations.select_org', org_id=u.id) }}">View Details</a>
+                            </td>
+							<td>
+                                <a class="ui teal button" href="{{ url_for('Project.new_project', org_id=u.id) }}">Create Projects</a>
                             </td>
                         </tr>
                     {% endfor %}
