--- a/app/templates/project/create_project.html
+++ b/app/templates/project/create_project.html
@@ -9,13 +9,13 @@
 {% block content %}
     <div class="ui stackable centered grid container">
         <div class="twelve wide column">
-                <a class="ui basic compact button" href="{{ url_for('question.index') }}">
+                <a class="ui basic compact button" href="{{ url_for('project.index') }}">
                 <i class="caret left icon"></i>
-                Back to "{{ org.org_name }}" Questions' List
+                Back to "{{ org.org_name }}" Project' dashboard
             </a>
             <h2 class="ui header">
-                Create a new question
-                <div class="sub header">Add a question</div>
+                Create a new project
+                <div class="sub header">Add a project</div>
             </h2>
 
             {% set flashes = {
@@ -28,26 +28,9 @@
             {{ f.begin_form(form, flashes) }}
 
             <div class="field">
-                {{ f.render_form_field(form.question) }}
+                {{ f.render_form_field(form.name) }}
             </div>
-            <div class="field">
-                {{ f.render_form_field(form.description) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_one) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_two) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_three) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_four) }}
-            </div>
-            <div class="field">
-                {{ f.render_form_field(form.option_five) }}
-            </div>
+
             {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
             {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
             {{ f.form_message(flashes['info'], header='Information', class='info') }}
