--- a/app/templates/project/project_dashboard.html
+++ b/app/templates/project/project_dashboard.html
@@ -23,16 +23,19 @@
 {% block content %}
     <div class="ui stackable grid container">
         <div class="sixteen wide tablet twelve wide computer centered column">
-            <a class="ui basic compact button" href="{{ url_for('project.index') }}">
+            <a class="ui basic compact button" href="{{ url_for('organisations.org_home') }}">
                 <i class="caret left icon"></i>
-                Back to Project dashboard
+                Back to org dashboard
             </a>
             <h2 class="ui header">
-                Questions
+                Projects
                 <div class="sub header">
-                    View and manage your questions.
+                    View and manage your projects.
                 </div>
             </h2>
+            <div class="ui header" style="width: 100%; height: 50px">
+                <a class="ui teal right floated button" href="{{ url_for('project.new_project', org_id=org.id) }}">Create New Project</a>
+			</div>
             {# Use overflow-x: scroll so that mobile views don't freak out
              # when the table is too wide #}
 
@@ -41,40 +44,30 @@
                     <thead>
                     <tr>
 
-                        <th>Project ID.</th>
-                        <th>Question Title</th>
-                        <th>Description</th>
-                        <th>Option One</th>
-                        <th>Option Two</th>
-                        <th>Option Three</th>
-                        <th>Option Four</th>
-                        <th>Option Five</th>
+                        <th>Project No.</th>
+                        <th>Project Name</th>
                         <th>Edit</th>
+                        <th>Create Questions</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for u in question %}
+                    {% for u in project %}
                         <tr>
-                            <td>{{ u.project_id }}</td>
-                            <td>{{ u.question }}</td>
-                            <td>{{ u.description }}</td>
-                            <td>{{ u.option_one }}</td>
-                            <td>{{ u.option_two }}</td>
-                            <td>{{ u.option_three }}</td>
-                            <td>{{ u.option_four }}</td>
-                            <td>{{ u.option_five}}</td>
+                            <td>{{ u.id }}</td>
+                            <td>{{ u.name }}</td>
                             <td>
-                                <a class="ui blue left floated button" href="{{ url_for('question.edit_question', question_id=u.id, question=u.question) }}">Edit</a>
+                                <a class="ui blue left floated button" href="{{ url_for('project.edit_project', project_id=u.id, name=u.name) }}">Edit</a>
                                 <!---<a class="ui red left floated button" style="margin-top: 1px"
-                                   href="{# url_for('question.delete_question', question_id=u.id) #}" onclick="return confirmDeleteQuestion('{{ question.id }}');" data-content="{{ question.id }}">Delete</a>--->						
+                                   href="{# url_for('project.delete_project', project_id=u.id) #}" onclick="return confirmDeleteProject('{{ project.id }}');" data-content="{{ project.id }}">Delete</a>--->						
                             </td>
+                            <td><a class="ui teal right floated button" href="{{ url_for('question.new_question', org_id=org.id, project_id=u.id) }}">Create New Question</a></td>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
-        <form method="POST" action="{{ url_for('question.delete_question', question_id=0) }}" id="delete-questin-form">
+        <form method="POST" action="{{ url_for('project.delete_project', project_id=0) }}" id="delete-questin-form">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         </form>
     </div>
@@ -82,18 +75,18 @@
 {% block scripts %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script>
-        function confirmDeleteQuestion(question_id){
+        function confirmDeleteProject(project_id){
             swal({
                 title: "Are you sure?",
-                text: "Once deleted, you will not be able to recover this question",
+                text: "Once deleted, you will not be able to recover this project",
                 icon: "warning",
                 buttons: true,
                 dangerMode: true,
             })
                 .then((willDelete) => {
                     if (willDelete) {
-                        let form = $("#delete-question-form");
-                        form.attr('action', "{{ url_for('question.delete_question', question_id=0) }}".replace('0',question_id));
+                        let form = $("#delete-project-form");
+                        form.attr('action', "{{ url_for('project.delete_project', project_id=0) }}".replace('0',project_id));
                         form.submit();
                     } else {
                         return false;
